--- a/.env
+++ b/.env
@@ -1,2 +1,1 @@
-DATABASE_URL=postgresql://neondb_owner:npg_pxk6Var0uvZJ@ep-weathered-sunset-ah7zy998-pooler.c-3.us-east-1.aws.neon.tech/neondb?sslmode=require&channel_binding=require
-
+DATABASE_URL="postgresql://neondb_owner:npg_pxk6Var0uvZJ@ep-weathered-sunset-ah7zy998-pooler.c-3.us-east-1.aws.neon.tech/neondb?sslmode=require&channel_binding=require"
