--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
   "dependencies": {
     "@prisma/adapter-pg": "^7.2.0",
     "@prisma/client": "^7.2.0",
+    "@types/pg": "^8.16.0",
     "dotenv": "^17.2.3",
     "next": "14.2.35",
+    "pg": "^8.17.1",
     "react": "^18",
     "react-dom": "^18"
   },
