--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "next": "14.2.35",
     "pg": "^8.17.1",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "zustand": "^5.0.10"
   },
   "devDependencies": {
     "@types/node": "^20",
