--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "pg": "^8.17.1",
     "react": "^18",
     "react-dom": "^18",
+    "react-toastify": "^11.0.5",
     "zod": "^4.3.5",
     "zustand": "^5.0.10"
   },
