Obtener la URL de la imagen que se sube

--- a/.env
+++ b/.env
@@ -1,1 +1,8 @@
 DATABASE_URL="postgresql://neondb_owner:npg_pxk6Var0uvZJ@ep-weathered-sunset-ah7zy998-pooler.c-3.us-east-1.aws.neon.tech/neondb?sslmode=require&channel_binding=require"
+
+NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME="dozxgwfly"
+NEXT_PUBLIC_CLOUDINARY_API_KEY="686767498264559"
+CLOUDINARY_API_SECRET="C8ZZRGN0hASqBKkxavfgAfEZFoU"
+ 
+NEXT_PUBLIC_CLOUDINARY_SECURE_DISTRIBUTION="<Your Secure Distribution / CNAME>"
+NEXT_PUBLIC_CLOUDINARY_PRIVATE_CDN="<true|false>"
