--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "seed": "tsx prisma/seed.ts"
+    "seed": "tsx prisma/seed.ts",
+    "postinstall": "patch-package"
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
@@ -16,19 +17,23 @@
     "@types/pg": "^8.16.0",
     "dotenv": "^17.2.3",
     "next": "14.2.35",
+    "next-cloudinary": "^6.17.5",
     "pg": "^8.17.1",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^5.5.0",
     "react-toastify": "^11.0.5",
     "zod": "^4.3.5",
     "zustand": "^5.0.10"
   },
   "devDependencies": {
+    "@tsconfig/recommended": "^1.0.13",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.2.35",
+    "patch-package": "^8.0.0",
     "postcss": "^8",
     "prisma": "^7.2.0",
     "tailwindcss": "^3.4.1",
